--- a/package.json
+++ b/package.json
@@ -1,28 +1,38 @@
 {
-  "name": "blogging-website-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "api/index.js",
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
-    "dev": "nodemon server"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.0",
-    "mongoose-unique-validator": "^5.0.1",
-    "slugify": "^1.6.6"
+    "axios": "^0.21.1",
+    "classnames": "^2.3.1",
+    "formik": "^2.2.9",
+    "history": "^5.0.0",
+    "lodash-es": "^4.17.21",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-query": "^3.18.1",
+    "react-router-dom": "^6.0.0-beta.0",
+    "use-deep-compare-effect": "^1.6.1",
+    "valtio": "^1.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@testing-library/cypress": "^8.0.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "cypress": "^8.2.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.41",
+    "vite": "^2.3.8"
   }
 }
